# Motiondetector

./: .gitignore  CMakeLists.txt  README.md  evaluate.py  run_eval_batch.py
cpp_training-src/: .gitignore  CMakeLists.txt  installer.nsi  main_cli.cpp  mainwindow.cpp  mainwindow.h  motion_detector.cpp
src/: main.cpp  motion_detector.cpp  motion_detector.h
